# SDPStrucutures

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  unit_tests.cpp
.github/workflows/: cmake-multi-platform.yml
google_test/: CMakeLists.txt.in
structures/: Readme.md
structures/Array/: ArrayInterface.hpp  ArrayStatic.hpp  DynamicArray.hpp
structures/List/: DoublyLinkedList.hpp  LinkedList.hpp
structures/Map/: HashMap.hpp
structures/Optional/: Optional.hpp
structures/Pair/: Pair.hpp
structures/Queue/: LinkedQueue.hpp
structures/Stack/: LinkedStack.hpp
structures/Trees/: Trees.hpp
tests/Array/: ArrayTest.cpp  DynamicArrayTest.cpp
tests/List/: DoublyLinkedList.cpp  ListTest.cpp
tests/Map/: HashMap.cpp
tests/Optional/: OptionalTest.cpp
tests/Pair/: Pair.cpp
tests/Tree/: Tree.cpp
